Implementing login rest resource and configure app for rest services

--- a/Server-side/.classpath
+++ b/Server-side/.classpath
@@ -6,9 +6,9 @@
 	<classpathentry kind="lib" path="ext/lib/Json-ext/java-json.jar"/>
 	<classpathentry kind="lib" path="ext/lib/Junit-gae-eidition/appengine-api-stubs-1.9.18.jar"/>
 	<classpathentry kind="lib" path="ext/lib/Junit-gae-eidition/appengine-testing-1.9.18.jar"/>
-	<classpathentry kind="lib" path="ext/lib/restlet-gae-edition/org.restlet.ext.json.jar"/>
-	<classpathentry kind="lib" path="ext/lib/restlet-gae-edition/org.restlet.ext.servlet.jar"/>
-	<classpathentry kind="lib" path="ext/lib/restlet-gae-edition/org.restlet.jar"/>
+	<classpathentry exported="true" kind="lib" path="ext/lib/restlet-gae-edition/org.restlet.ext.json.jar"/>
+	<classpathentry exported="true" kind="lib" path="ext/lib/restlet-gae-edition/org.restlet.ext.servlet.jar"/>
+	<classpathentry exported="true" kind="lib" path="ext/lib/restlet-gae-edition/org.restlet.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
