--- a/Server-side/war/WEB-INF/web.xml
+++ b/Server-side/war/WEB-INF/web.xml
@@ -12,6 +12,20 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>Freediving_logbook</servlet-name>
 		<url-pattern>/freediving_logbook</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+       <servlet-name>RestletServlet</servlet-name>
+       <servlet-class>org.restlet.ext.servlet.ServerServlet</servlet-class>
+       <init-param>
+               <param-name>org.restlet.application</param-name>
+               <param-value>org.gianluca.logbook.rest.application.LogbookApplication</param-value>
+       </init-param>
+  	</servlet>
+    <servlet-mapping>
+		<servlet-name>RestletServlet</servlet-name>
+		<url-pattern>/app/*</url-pattern>
+	</servlet-mapping>
+	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
