--- a/Server-side/.classpath
+++ b/Server-side/.classpath
@@ -9,6 +9,8 @@
 	<classpathentry exported="true" kind="lib" path="ext/lib/restlet-gae-edition/org.restlet.ext.json.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/lib/restlet-gae-edition/org.restlet.ext.servlet.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/lib/restlet-gae-edition/org.restlet.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/restfb-1.14.0.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/java-json.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
