--- a/Server-side/.classpath
+++ b/Server-side/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry kind="lib" path="ext/lib/Junit-gae-eidition/appengine-testing-1.9.25.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER/App Engine (1)"/>
+	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
