--- a/Server-side/.classpath
+++ b/Server-side/.classpath
@@ -11,8 +11,6 @@
 	<classpathentry kind="lib" path="ext/lib/Junit-gae-eidition/appengine-api-stubs-1.9.25.jar"/>
 	<classpathentry kind="lib" path="ext/lib/Junit-gae-eidition/appengine-testing-1.9.25.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER/App Engine (1)"/>
-	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
-	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER/App Engine"/>
+	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER/appengine-java-sdk-1.9.25"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
